--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "tymon/jwt-auth": "^0.5.6",
         "thomaswelton/laravel-gravatar": "^1.1",
-        "laracasts/flash": "^1.3"
+        "laracasts/flash": "^1.3",
+        "laravelcollective/html": "^5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
