--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "tymon/jwt-auth": "^0.5.6",
         "thomaswelton/laravel-gravatar": "^1.1",
         "laracasts/flash": "^1.3",
-        "laravelcollective/html": "^5.2"
+        "laravelcollective/html": "^5.2",
+        "maatwebsite/excel": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
