--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "thomaswelton/laravel-gravatar": "^1.1",
         "laracasts/flash": "^1.3",
         "laravelcollective/html": "^5.2",
-        "maatwebsite/excel": "^2.1"
+        "maatwebsite/excel": "^2.1",
+        "pusher/pusher-php-server": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
